--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "test": "jest"
   },
   "dependencies": {
+    "@langchain/core": "^0.1.62",
     "@langchain/groq": "^0.0.9",
     "dotenv": "^16.4.5",
+    "langchain": "^0.1.36",
     "mobx": "^6.12.3",
     "mobx-react": "^9.1.1",
     "react": "^18.2.0",
