--- a/backend/package.json
+++ b/backend/package.json
@@ -13,12 +13,14 @@
   },
   "author": "SERTIS",
   "dependencies": {
+    "@langchain/groq": "^0.0.9",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "glob": "^7.1.7",
     "langchain": "^0.1.36",
+    "module-alias": "^2.2.3",
     "routing-controllers": "^0.10.4",
     "routing-controllers-openapi": "^4.0.0",
     "typedi": "^0.10.0"
@@ -26,6 +28,7 @@
   "devDependencies": {
     "@types/cors": "2.8.17",
     "@types/express": "^4.17.21",
+    "@types/glob": "^8.1.0",
     "@types/module-alias": "^2.0.4",
     "@types/node": "^20.12.10",
     "nodemon": "^3.1.0",
