--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -1,28 +1,12 @@
 {
-  "compilerOptions": {
-      "module": "commonjs",
-      "esModuleInterop": true,
-      "target": "ES2020",
-      "noImplicitAny": true,
-      "moduleResolution": "node",
-      "sourceMap": true,
-      "outDir": "dist",
-      "baseUrl": ".",
-      "paths": {
-          "*": [
-              "node_modules/*"
-          ],
-          "@base/*": [
-              "src/*"
-          ],
-          "@api/*": [
-              "src/api/*"
-          ]
-      },
-      "emitDecoratorMetadata": true,
-      "experimentalDecorators": true
-  },
-  "include": [
-      "src/**/*"
-  ]
-}
+    "compilerOptions": {
+      "composite": true,
+      "skipLibCheck": true,
+      "module": "ESNext",
+      "moduleResolution": "bundler",
+      "allowSyntheticDefaultImports": true,
+      "strict": false,
+      "noUnusedParameters": false,
+    },
+    "include": ["vite.config.ts"]
+  }
