feat(docker): created docker compose and Dockerfile for backend

--- a/backend/.dockerignore
+++ b/backend/.dockerignore
@@ -1,5 +1,32 @@
+**/.classpath
+**/.dockerignore
+**/.env
+**/.git
+**/.gitignore
+**/.project
+**/.settings
+**/.toolstarget
+**/.vs
+**/.vscode
+**/.next
+**/.cache
+**/*.*proj.user
+**/*.dbmdl
+**/*.jfm
+**/charts
+**/docker-compose*
+**/compose*
+**/Dockerfile*
+**/node_modules
+**/npm-debug.log
+**/obj
+**/secrets.dev.yaml
+**/values.dev.yaml
+**/build
+**/dist
+LICENSE
+README.md
 .vscode
-/node_modules
 .eslintrc
 .eslintignore
 .editorconfig
@@ -7,5 +34,3 @@
 .lintstagedrc.json
 .prettierrc
 jest.config.js
-Dockerfile
-docker-compose.yml
