--- a/backend/package.json
+++ b/backend/package.json
@@ -8,8 +8,8 @@
   },
   "scripts": {
     "build": "npx tsc",
-    "start": "npm run build && export NODE_ENV=production node ./dist/index.js",
-    "dev": "export NODE_ENV=development && nodemon --exec ts-node src/index.ts"
+    "start": "npm run build && NODE_ENV=production node ./dist/index.js",
+    "dev": "NODE_ENV=development && nodemon --exec ts-node src/index.ts"
   },
   "author": "SERTIS",
   "dependencies": {
@@ -18,19 +18,23 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "express-list-endpoints": "^7.1.0",
     "glob": "^7.1.7",
     "langchain": "^0.1.36",
     "module-alias": "^2.2.3",
     "routing-controllers": "^0.10.4",
     "routing-controllers-openapi": "^4.0.0",
+    "swagger-ui-express": "^5.0.0",
     "typedi": "^0.10.0"
   },
   "devDependencies": {
     "@types/cors": "2.8.17",
     "@types/express": "^4.17.21",
+    "@types/express-list-endpoints": "^6.0.3",
     "@types/glob": "^8.1.0",
     "@types/module-alias": "^2.0.4",
     "@types/node": "^20.12.10",
+    "@types/swagger-ui-express": "^4.1.6",
     "nodemon": "^3.1.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5"
