feat: Add Access-Control-Allow-Origin header for 2048 game

--- a/nginx.conf
+++ b/nginx.conf
@@ -3,6 +3,7 @@ server {
     server_name localhost;
 
     location / {
+        add_header 'Access-Control-Allow-Origin' 'https://2048.borjagomez.eus';
         root /usr/share/nginx/html;
         index index.html;
         try_files $uri $uri/ /index.html;
