feat: Update reflect-metadata

--- a/backend/package.json
+++ b/backend/package.json
@@ -22,9 +22,9 @@
     "glob": "^7.1.7",
     "langchain": "^0.1.36",
     "module-alias": "^2.2.3",
+    "reflect-metadata": "^0.2.2",
     "routing-controllers": "^0.10.4",
     "routing-controllers-openapi": "^4.0.0",
-    "rxjs": "^7.8.1",
     "swagger-ui-express": "^5.0.0",
     "typedi": "^0.10.0"
   },
