--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,7 @@
     "node": ">=18"
   },
   "scripts": {
-    "build": "npx tsc",
+    "build": "tsc",
     "start": "npm run build && NODE_ENV=production node ./dist/index.js",
     "dev": "NODE_ENV=development && nodemon --exec ts-node src/index.ts"
   },
