--- a/backend/package.json
+++ b/backend/package.json
@@ -35,6 +35,7 @@
     "@types/glob": "^8.1.0",
     "@types/module-alias": "^2.0.4",
     "@types/node": "^20.12.10",
+    "@types/reflect-metadata": "^0.1.0",
     "@types/swagger-ui-express": "^4.1.6",
     "nodemon": "^3.1.0",
     "ts-node": "^10.9.2",
