fix(routing): when the app is built now routes and show the app correctly

--- a/nginx.conf
+++ b/nginx.conf
@@ -3,7 +3,7 @@ server {
     server_name localhost;
 
     location / {
-        add_header 'Access-Control-Allow-Origin' 'https://2048.borjagomez.eus';
+        add_header 'Access-Control-Allow-Origin' 'https://2048.borjagomez.eus, https://hads-2048-latest.onrender.com';
         root /usr/share/nginx/html;
         index index.html;
         try_files $uri $uri/ /index.html;
