feat: Build application with provided API host Add `ARG VITE_API_HOST` to RUN npm run build in the Dockerfile. Then, in the compose.yaml file, set the `VITE_API_HOST` argument to `localhost:3001`. This ensures that the application is built with the provided API host.

--- a/compose.yaml
+++ b/compose.yaml
@@ -2,6 +2,8 @@ services:
   front-end:
     build:
       context: .
+      args:
+        - VITE_API_HOST=localhost:3001
     environment:
       NODE_ENV: production
     ports:
@@ -15,7 +17,7 @@ services:
       APP_NAME: 2048-Backend
       APP_PORT: 3001
       APP_ROUTE_PREFIX: /api
-      GROQ_API_KEY: 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
+      GROQ_API_KEY: GROQ_API_KEY
     ports:
       - 3001:3001
 
